# 4chan-sdk

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
doc/: Doxyfile
examples/: get_catalog_json.rs
fourchan-sdk/: Cargo.toml
fourchan-sdk/src/: lib.rs
fourchan-sdk/src/core/: html.rs  mod.rs  repository.rs  utils.rs
fourchan-sdk/src/models/: catalog.rs  post.rs
include/: Board.hpp  Boards.hpp  Catalog.hpp  CatalogEntry.hpp  Client.hpp  Constants.hpp  Cooldowns.hpp  Download.hpp  File.hpp  HtmlUtils.hpp  JsonUtils.hpp  Post.hpp  Repository.hpp  Text.hpp  Thread.hpp  Utils.hpp
lib/json/: json.hpp
src/: Client.cpp  Download.cpp  HtmlUtils.cpp  JsonUtils.cpp  Post.cpp  Repository.cpp  Text.cpp  Utils.cpp  lib.rs
src/core/: download.rs  error.rs  html.rs  mod.rs  repository.rs  utils.rs
src/models/: board.rs  mod.rs  post.rs  thread.rs
src/traits/: operations.rs
tests/: CMakeLists.txt
tests/dummy/: boards.json  catalog-po.json
tests/src/: main.cpp  tests.cpp
