[package]
name = "fourchan-sdk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"]}
html5ever = "0.25"
markup5ever_rcdom = "0.1"
select = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
lazy_static = "1.4.0"
thiserror = "1.0.29"
